fixtures/errors/class_this_before_super.expected
exit_code: 1
--- stdout ---
--- stderr ---
Error: error: derived constructor cannot access this or super before super()
 --> errors/class_this_before_super.js:9:5
9 |     this.x = 1;
  |     ^^^^

